# skoleverksted

./: .dockerignore  .gitignore  Dockerfile  README.md  RENDER_DEPLOYMENT.md  VERCEL_DEPLOYMENT.md  docker-compose.yml  render.yaml
MateMaTeX/backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  render.yaml  requirements.txt  schema.sql
MateMaTeX/backend/app/: __init__.py  auth.py  cache.py  config.py  db.py  job_store.py  logging_config.py  main.py  public_errors.py  rate_limit.py  validators.py
MateMaTeX/backend/app/collaboration/: __init__.py  router.py
MateMaTeX/backend/app/curriculum/: __init__.py  lk20.py  topic_coverage.py
MateMaTeX/backend/app/differentiation/: __init__.py  generator.py  hint_engine.py
MateMaTeX/backend/app/editor/: __init__.py  ai_actions.py  compiler.py
MateMaTeX/backend/app/exercises/: __init__.py  parser.py  router.py
MateMaTeX/backend/app/export/: __init__.py  powerpoint.py  qr.py  router.py  word.py
MateMaTeX/backend/app/latex/: __init__.py  compiler.py  graph_templates.py  layout_report.py  preamble.py  text_sanitize.py
MateMaTeX/backend/app/m1/: router.py
MateMaTeX/backend/app/models/: __init__.py  llm.py  state.py
MateMaTeX/backend/m1/: __init__.py  scorer.py
MateMaTeX/backend/migrations/: 001_initial.sql
MateMaTeX/backend/tests/: __init__.py  test_content_quality.py  test_differentiation.py  test_exercise_parser.py  test_export.py  test_llm_resilience.py  test_m1_report.py  test_m1_report_api.py  test_m1_scorer.py  test_math_verifier.py  test_pipeline.py  test_sharing.py  test_text_sanitize.py
(+285 files in other folders)
